--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,4 +1,5 @@
 blis==0.7.7
+PyMuPDF==1.20.1
 catalogue==2.0.7
 gunicorn==19.9.0
 certifi==2021.10.8
@@ -12,8 +13,6 @@ fonttools==4.32.0
 huggingface-hub==0.5.1
 idna==3.3
 importlib-metadata==4.11.3
-itsdangerous==2.1.2
-Jinja2==3.1.1
 joblib==1.1.0
 kiwisolver==1.4.2
 langcodes==3.3.0
@@ -47,14 +46,10 @@ spacy-loggers==1.0.2
 spacy-transformers==1.1.5
 srsly==2.4.2
 thinc==8.0.15
-threadpoolctl==3.1.0
-tika==1.24
 tokenizers==0.11.6
 torch==1.11.0
 tqdm==4.64.0
 transformers==4.17.0
-typer==0.4.1
-typing-extensions==3.10.0.2
 urllib3==1.26.9
 wasabi==0.9.1
 Werkzeug==2.1.1
