--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 App/My_trainedmodel_61/transformer/model filter=lfs diff=lfs merge=lfs -text
+App/my_trainedpickelmodel_61.pkl filter=lfs diff=lfs merge=lfs -text
